gen/FrameParser.java
package gen;// Generated from C:/Users/LENOVO/Music/2/TypeScriptCompiler/Main.FrameParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FrameParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Body=1, Type=2, Void=3, Injectable=4, Component=5, Interface=6, Import=7, 
		From=8, Async=9, Await=10, TypeDeclare=11, ReadOnly=12, Export=13, Arrow=14, 
		Return=15, Console=16, Never=17, Function=18, Constructor=19, Accessmodifier=20, 
		SetGet=21, Enum=22, If=23, Else=24, For=25, While=26, ATT=27, Implements=28, 
		Const=29, ASTERISK=30, STRUCTURAL_DIRECTIVE=31, LT=32, GT=33, SLASH_GT=34, 
		SLASH_LT=35, HASH=36, TEQUAL=37, LBRACKET=38, RBRACKET=39, LPAREN=40, 
		RPAREN=41, LBRACKET_PAREN=42, RBRACKET_PAREN=43, LBRACE=44, RBRACE=45, 
		LBRACKETS=46, RBRACKETS=47, COLON=48, EQUALS=49, SEMICOLON=50, COMMA=51, 
		DOT=52, QUESTION=53, PIPE=54, ANDAND=55, OROR=56, NOTEQUAL=57, EQUALEQUAL=58, 
		COMPARISON=59, PLUS=60, MINUS=61, DIV=62, NOT=63, Class=64, AS=65, LET=66, 
		OF=67, AngularQut=68, STRING=69, NUMBER=70, BOOLEAN=71, NULL=72, IDENTIFIER=73, 
		IDENT=74, ESCAPE=75, WS=76, And=77, Or=78, SEMICOLONColon=79;
	public static final int
		RULE_rootprogram = 0, RULE_program = 1, RULE_statements = 2, RULE_stetment = 3, 
		RULE_prefix = 4, RULE_component = 5, RULE_services = 6, RULE_import_rule = 7, 
		RULE_operations = 8, RULE_class = 9, RULE_var = 10, RULE_classbody = 11, 
		RULE_constructor = 12, RULE_interface = 13, RULE_interfacebody = 14, RULE_interfacefun = 15, 
		RULE_interfacevar = 16, RULE_enum = 17, RULE_enumassignable = 18, RULE_enumAssin = 19, 
		RULE_number_STRING_BOOLEAN = 20, RULE_class_function = 21, RULE_function = 22, 
		RULE_body_with_out_curly = 23, RULE_body = 24, RULE_basedata = 25, RULE_info = 26, 
		RULE_array = 27, RULE_data = 28, RULE_typeequal = 29, RULE_return = 30, 
		RULE_typedeclare = 31, RULE_prameters = 32, RULE_header = 33, RULE_arrowfunction = 34, 
		RULE_print = 35, RULE_prameter = 36, RULE_arguments = 37, RULE_argument = 38, 
		RULE_vardeclare = 39, RULE_keyword = 40, RULE_equal = 41, RULE_equalbasedata = 42, 
		RULE_types = 43, RULE_type = 44, RULE_access = 45, RULE_culls = 46, RULE_cullfunction = 47, 
		RULE_objects = 48, RULE_object = 49, RULE_objectstype = 50, RULE_objecttype = 51, 
		RULE_typecurles = 52, RULE_typecurle = 53, RULE_template = 54, RULE_element = 55, 
		RULE_content = 56, RULE_elementContent = 57, RULE_htmlElement = 58, RULE_character = 59, 
		RULE_tagOpenEmpty = 60, RULE_tagOpen = 61, RULE_tagClose = 62, RULE_attribute = 63, 
		RULE_angularComponent = 64, RULE_directiveElement = 65, RULE_structuralDirective = 66, 
		RULE_attributeDirective = 67, RULE_twoWayDirective = 68, RULE_expression = 69, 
		RULE_logicalOrExpression = 70, RULE_logicalAndExpression = 71, RULE_equalityExpression = 72, 
		RULE_relationalExpression = 73, RULE_additiveExpression = 74, RULE_multiplicativeExpression = 75, 
		RULE_unaryExpression = 76, RULE_primaryExpression = 77, RULE_pipeExpression = 78, 
		RULE_baseExpression = 79, RULE_literal = 80, RULE_functionCall = 81, RULE_arrayLiteral = 82, 
		RULE_objectLiteral = 83, RULE_propLitiral = 84, RULE_interpolation = 85, 
		RULE_text = 86, RULE_if_statement = 87, RULE_loop_statement = 88, RULE_while = 89, 
		RULE_for = 90, RULE_loop_init = 91, RULE_loop_step = 92;
	private static String[] makeRuleNames() {
		return new String[] {
			"rootprogram", "program", "statements", "stetment", "prefix", "component", 
			"services", "import_rule", "operations", "class", "var", "classbody", 
			"constructor", "interface", "interfacebody", "interfacefun", "interfacevar", 
			"enum", "enumassignable", "enumAssin", "number_STRING_BOOLEAN", "class_function", 
			"function", "body_with_out_curly", "body", "basedata", "info", "array", 
			"data", "typeequal", "return", "typedeclare", "prameters", "header", 
			"arrowfunction", "print", "prameter", "arguments", "argument", "vardeclare", 
			"keyword", "equal", "equalbasedata", "types", "type", "access", "culls", 
			"cullfunction", "objects", "object", "objectstype", "objecttype", "typecurles", 
			"typecurle", "template", "element", "content", "elementContent", "htmlElement", 
			"character", "tagOpenEmpty", "tagOpen", "tagClose", "attribute", "angularComponent", 
			"directiveElement", "structuralDirective", "attributeDirective", "twoWayDirective", 
			"expression", "logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "primaryExpression", "pipeExpression", "baseExpression", 
			"literal", "functionCall", "arrayLiteral", "objectLiteral", "propLitiral", 
			"interpolation", "text", "if_statement", "loop_statement", "while", "for", 
			"loop_init", "loop_step"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'body'", null, "'void'", "'Injectable'", "'Component'", "'interface'", 
			"'import'", "'from'", "'async'", "'await'", "'type'", "'readonly'", "'export'", 
			"'=>'", "'return'", "'console'", "'never'", "'function'", "'constructor'", 
			null, null, "'enum'", "'if'", "'else'", "'for'", "'while'", "'@'", "'implements'", 
			"'const'", "'*'", null, "'<'", "'>'", "'</'", "'/>'", "'#'", "'==='", 
			"'['", "']'", "'('", "')'", "'[('", "')]'", "'{{'", "'}}'", "'{'", "'}'", 
			"':'", "'='", "';'", "','", "'.'", "'?'", "'|'", "'&&'", "'||'", "'!='", 
			"'=='", null, "'+'", "'-'", "'/'", "'!'", "'class'", "'as'", "'let'", 
			"'of'", "'`'", null, null, null, "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Body", "Type", "Void", "Injectable", "Component", "Interface", 
			"Import", "From", "Async", "Await", "TypeDeclare", "ReadOnly", "Export", 
			"Arrow", "Return", "Console", "Never", "Function", "Constructor", "Accessmodifier", 
			"SetGet", "Enum", "If", "Else", "For", "While", "ATT", "Implements", 
			"Const", "ASTERISK", "STRUCTURAL_DIRECTIVE", "LT", "GT", "SLASH_GT", 
			"SLASH_LT", "HASH", "TEQUAL", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
			"LBRACKET_PAREN", "RBRACKET_PAREN", "LBRACE", "RBRACE", "LBRACKETS", 
			"RBRACKETS", "COLON", "EQUALS", "SEMICOLON", "COMMA", "DOT", "QUESTION", 
			"PIPE", "ANDAND", "OROR", "NOTEQUAL", "EQUALEQUAL", "COMPARISON", "PLUS", 
			"MINUS", "DIV", "NOT", "Class", "AS", "LET", "OF", "AngularQut", "STRING", 
			"NUMBER", "BOOLEAN", "NULL", "IDENTIFIER", "IDENT", "ESCAPE", "WS", "And", 
			"Or", "SEMICOLONColon"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FrameParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FrameParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RootprogramContext extends ParserRuleContext {
		public List<ProgramContext> program() {
			return getRuleContexts(ProgramContext.class);
		}
		public ProgramContext program(int i) {
			return getRuleContext(ProgramContext.class,i);
		}
		public TerminalNode EOF() { return getToken(FrameParser.EOF, 0); }
		public RootprogramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rootprogram; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor) return ((FrameParserVisitor<? extends T>)visitor).visitRootprogram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootprogramContext rootprogram() throws RecognitionException {
		RootprogramContext _localctx = new RootprogramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_rootprogram);
		int _la;
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17597265685696L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 549L) != 0)) {
					{
					{
					setState(186);
					program();
					}
					}
					setState(191);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(192);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementsContext> statements() {
			return getRuleContexts(StatementsContext.class);
		}
		public StatementsContext statements(int i) {
			return getRuleContext(StatementsContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(196); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(195);
					statements();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(198); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementsContext extends ParserRuleContext {
		public StetmentContext stetment() {
			return getRuleContext(StetmentContext.class,0);
		}
		public TerminalNode Export() { return getToken(FrameParser.Export, 0); }
		public TerminalNode Await() { return getToken(FrameParser.Await, 0); }
		public TerminalNode SEMICOLON() { return getToken(FrameParser.SEMICOLON, 0); }
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Export) {
				{
				setState(200);
				match(Export);
				}
			}

			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Await) {
				{
				setState(203);
				match(Await);
				}
			}

			{
			setState(206);
			stetment();
			}
			setState(208);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(207);
				match(SEMICOLON);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StetmentContext extends ParserRuleContext {
		public StetmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stetment; }
	 
		public StetmentContext() { }
		public void copyFrom(StetmentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ComponentStatementContext extends StetmentContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public ComponentStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitComponentStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclareStatementContext extends StetmentContext {
		public TypedeclareContext typedeclare() {
			return getRuleContext(TypedeclareContext.class,0);
		}
		public TypeDeclareStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitTypeDeclareStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarDeclareStatementContext extends StetmentContext {
		public VardeclareContext vardeclare() {
			return getRuleContext(VardeclareContext.class,0);
		}
		public VarDeclareStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitVarDeclareStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceStatementContext extends StetmentContext {
		public InterfaceContext interface_() {
			return getRuleContext(InterfaceContext.class,0);
		}
		public InterfaceStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitInterfaceStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AccessStatementContext extends StetmentContext {
		public AccessContext access() {
			return getRuleContext(AccessContext.class,0);
		}
		public AccessStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitAccessStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends StetmentContext {
		public Import_ruleContext import_rule() {
			return getRuleContext(Import_ruleContext.class,0);
		}
		public ImportStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LoopStatementContext extends StetmentContext {
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public LoopStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitLoopStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TemplateStatementContext extends StetmentContext {
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public TemplateStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitTemplateStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixStatementContext extends StetmentContext {
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public PrefixStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitPrefixStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class OperationsStatementContext extends StetmentContext {
		public OperationsContext operations() {
			return getRuleContext(OperationsContext.class,0);
		}
		public OperationsStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitOperationsStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStatementContext extends StetmentContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionStatementContext(StetmentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FrameParserVisitor ) return ((FrameParserVisitor<? extends T>)visitor).visitFunctionStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
